# trackitk12

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  config.py  main.py  pyproject.toml
application/: __init__.py  email_utils.py  forms.py  models.py  routes.py  utils.py
application/static/: sample_patron_upload.csv  sample_site_upload.csv  sample_user_upload.csv
application/templates/: add_category.html  add_device.html  add_notification.html  add_patron.html  add_role.html  add_site.html  add_user.html  base.html  bulk_upload_data.html  bulk_upload_devices.html  bulk_upload_patrons.html  categories.html  change_password.html  devices.html  edit_category.html  edit_device.html  edit_notification.html  edit_patron.html  edit_role.html  edit_site.html  edit_user.html  error.html  index.html  login.html  notifications.html  organization.html  patron_details.html  patrons.html  profile.html  roles.html  sites.html  users.html
installation/: create_env.py  seed_data.py
migrations/versions/: 0642377e4311_encrypt_user_patron_email_phone.py  15223b069217_add_in_repair_to_device.py  21d3fe1482c5_add_device_history_audit_trail.py  3157ebf5d70c_remove_site_abb_from_site.py  3772e0ac4ae5_add_ftp_schedule_start_stop_date.py  37be27bcf3aa_rename_site_gu_to_site_acronyms.py  4d1fa402a3ad_add_must_change_password_to_user.py  64865d4f15ef_add_email_config_to_organization.py  7ffaf7e10b12_add_index_on_bulk_upload_log_uploaded_at.py  bc8ce8723e62_add_repair_date_to_device.py  c8f02781111b_add_ftp_config_and_bulk_upload_log.py  (+4 more)
tests/: conftest.py  test_routes.py
(+8 files in other folders)
