[project]
name = "TRACKITK12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-caching>=2.3.1",
    "flask-mail>=0.10.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-paginate>=2024.4.12",
    "flask-wtf>=1.2.2",
    "pymysql>=1.1.2",
    "flask-limiter>=4.1.1",
    "flask-apscheduler>=1.13.1",
    "gunicorn>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
